hphp/test/slow/hack_mode/closing-tag-script.php.expectf
Fatal error: An expression is expected here. in %s/test/slow/hack_mode/closing-tag-script.php on line 3